--- a/index.html
+++ b/index.html
@@ -1,29 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="https://img.icons8.com/plasticine/100/000000/playstore.png">
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+  <!-- MDB -->
+  <link rel="stylesheet" href="./node_modules/mdb-ui-kit/css/mdb.min.css">
   <link rel="stylesheet" href="./css/main.css">
-  <title>Document</title>
+  <title>Apps</title>
 </head>
+
 <body>
-  
-  <!--Header-->
-  <header>
-    <div class="container"></div>
-  </header>
-  <!--/Header-->
+
+  <div class="container text-center">
+    <!-- Tabs navs -->
+    <ul class="nav nav-tabs mb-3" id="ex1" role="tablist">
+
+      <li class="nav-item" role="presentation">
+        <a class="nav-link d-flex align-items-center gap-1 fs-6 active" id="ex1-tab-1" data-mdb-toggle="tab"
+          href="#ex1-tabs-1" role="tab" aria-controls="ex1-tabs-1" aria-selected="true"><i
+            class="fas fa-calculator fa-2x text-danger"></i> Calculator</a>
+      </li>
+
+      <li class="nav-item" role="presentation">
+        <a class="nav-link d-flex align-items-center gap-1 fs-6" id="ex1-tab-2" data-mdb-toggle="tab" href="#ex1-tabs-2"
+          role="tab" aria-controls="ex1-tabs-2" aria-selected="false"><i
+            class="fas fa-fist-raised fa-2x text-danger"></i> Tasbeh</a>
+      </li>
+
+      <li class="nav-item" role="presentation">
+        <a class="nav-link d-flex align-items-center gap-1 fs-6" id="ex1-tab-3" data-mdb-toggle="tab" href="#ex1-tabs-3"
+          role="tab" aria-controls="ex1-tabs-3" aria-selected="false"><i
+            class="fas fa-clock fa-2x text-danger"></i>Clock</a>
+      </li>
+
+      <li class="nav-item" role="presentation">
+        <a class="nav-link d-flex align-items-center gap-1 fs-6" id="ex1-tab-4" data-mdb-toggle="tab" href="#ex1-tabs-4"
+          role="tab" aria-controls="ex1-tabs-4" aria-selected="false"><i class="fas fa-play fa-2x text-danger"></i>
+          play</a>
+      </li>
+
+      <li class="nav-item" role="presentation">
+        <a class="nav-link d-flex align-items-center gap-1 fs-6" id="ex1-tab-5" data-mdb-toggle="tab" href="#ex1-tabs-5"
+          role="tab" aria-controls="ex1-tabs-5" aria-selected="false"><i class="fas fa-list-ul fa-2x text-danger"></i>
+          ToDlist</a>
+      </li>
+
+      <li class="nav-item" role="presentation">
+        <a class="nav-link d-flex align-items-center gap-1 fs-6" id="ex1-tab-6" data-mdb-toggle="tab" href="#ex1-tabs-6"
+          role="tab" aria-controls="ex1-tabs-6" aria-selected="false"><i
+            class="fas fa-file-invoice-dollar fa-2x text-danger"></i> Convertend</a>
+      </li>
+
+      <li class="nav-item" role="presentation">
+        <a class="nav-link d-flex align-items-center gap-1 fs-6" id="ex1-tab-7" data-mdb-toggle="tab" href="#ex1-tabs-7"
+          role="tab" aria-controls="ex1-tabs-7" aria-selected="false"><i class="fas fa-globe fa-2x text-danger"></i>
+          TezYozish</a>
+      </li>
+
+    </ul>
+    <!-- Tabs navs -->
+
+    <!-- Tabs content -->
+    <div class="tab-content" id="ex1-content">
+
+      <div class="tab-pane fade show active bg-info" id="ex1-tabs-1" role="tabpanel" aria-labelledby="ex1-tab-1">
+        Calculator
+      </div>
+
+      <div class="tab-pane fade bg-danger" id="ex1-tabs-3" role="tabpanel" aria-labelledby="ex1-tab-3">
+        Tasbeh
+      </div>
+
+      <div class="tab-pane fade bg-light" id="ex1-tabs-8" role="tabpanel" aria-labelledby="ex1-tab-8">
+        soat
+      </div>
+
+      <div class="tab-pane fade bg-primary" id="ex1-tabs-4" role="tabpanel" aria-labelledby="ex1-tab-4">
+        play
+      </div>
+
+      <div class="tab-pane fade bg-primary" id="ex1-tabs-5" role="tabpanel" aria-labelledby="ex1-tab-5">
+        ToDlist
+      </div>
+
+      <div class="tab-pane fade bg-primary" id="ex1-tabs-6" role="tabpanel" aria-labelledby="ex1-tab-6">
+        Convertend
+      </div>
+
+      <div class="tab-pane fade bg-primary" id="ex1-tabs-7" role="tabpanel" aria-labelledby="ex1-tab-7">
+        TezYozish
+      </div>
+
+    </div>
+    <!-- Tabs content -->
+  </div>
 
 
-  <!--Main -->
-  <main>
-    <div class="container"></div>
-  </main>
-  <!--Main -->
 
-  <footer>
-    <div class="container"></div>
-  </footer>
+
+
+
+
+  <!-- MDB JS -->
+  <script src="./js/main.js"></script>
+  <script type="text/javascript" src="./node_modules/mdb-ui-kit/src/js/mdb.free.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.js"></script>
 </body>
+
 </html>
